[package]
name = "nml"
version = "0.1.0"
edition = "2021"
license = "GNU AGPL3"

[[bin]]
name = "nml"
path = "src/main.rs"

[[bin]]
name = "nmlls"
path = "src/server.rs"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
auto-registry = { version = "0.0.2" }
auto-userdata = { path = "crates/auto-userdata" }
ariadne = "0.4.1"
dashmap = "6.0.1"
downcast-rs = "1.2.1"
getopts = "0.2.21"
graphviz-rust = "0.9.0"
lazy_static = "1.5.0"
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serde"] }
regex = "1.10.3"
rusqlite = { version = "0.31.0", features = [ "bundled" ] }
rust-crypto = "0.2.36"
serde = { version = "1.0.204", features = [ "derive" ] }
serde_json = "1.0.120"
syntect = "5.2.0"
tokio = { version = "1.38.1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
] }
tower-lsp = "0.20.0"
unicode-segmentation = "1.11.0"
walkdir = "2.5.0"
runtime-format = "0.1.3"
url = "2.5.4"
pathdiff = "0.2.3"
toml = "0.8.22"
parking_lot = "0.12.4"
anyhow = "1.0.98"

[dev-dependencies]
rand = "0.8.5"
