[package]
name = "auto-userdata"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0"}
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serde"] }
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }
lazy_static = "1.5.0"
